# nxt-python

./: .gitignore  .hg_archival.txt  .pre-commit-config.yaml  MANIFEST.in  README  README.md  Readme.txt  install.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.builds/: debian-testing.yml  debian.yml  freebsd.yml
.github/ISSUE_TEMPLATE/: issue.md
branches/rhn/: CHANGELOG  README  setup.py
branches/rhn/nxt/: bluesock.py  brick.py  locator.py
branches/rhn/nxt/sensor/: __init__.py  analog.py  common.py  digital.py  generic.py  (+2 more)
branches/v1.0/: setup.py
branches/v1.0.0/examples/: latency.py  test_sensors.py
branches/v1.0.0/nxt/: compass.py
branches/v1.0.1/nxt/: bluesock.py  error.py
branches/v1.0/docs/: nxt_python.html
branches/v1.1/: setup.py
branches/v1.1/docs/: nxt_python.html
branches/v1.1/nxt/: direct.py  locator.py  motor.py
branches/v1.2/: setup.py
branches/v1.2/examples/: server_prompt.py
branches/v1.2/nxt/: htcompass.py  lightblueglue.py  locator.py
branches/v2/: README  setup.py
branches/v2.0/: MANIFEST.in  README  setup.py
branches/v2.1/scripts/: nxt_push
branches/v2.2/: setup.py
branches/v2.2/docs/: nxt_filer.1  nxt_test.1
branches/v2.2/nxt/: __init__.py  locator.py  usbsock.py
branches/v2.2/scripts/: nxt_push  nxt_test
branches/v2/docs/: nxt-python.html
branches/v2/examples/: spin.py
branches/v2/nxt/: bluesock.py  brick.py  direct.py  locator.py  motor.py  system.py  usbsock.py
branches/v2/scripts/: nxt_filer  nxt_push  nxt_test
branches/zonetest/: setup.py
branches/zonetest/nxt/: __init__.py  bluesock.py  brick.py  classes.py  constants.py  error.py  locator.py  motor.py  usbsock.py
contrib/: 60-libnxt.rules  _incr_version
docs/: Makefile  about.rst  conf.py  config.rst  index.rst  installation.rst  make.bat  migration.rst  more docs.url  nxt_python.html  seealso.url
docs/api/: backends.rst  brick.rst  error.rst  index.rst  locator.rst  motcont.rst  motor.rst
docs/api/sensors/: generic.rst  hitechnic.rst  index.rst  mindsensors.rst
docs/commands/: common_options.rst  common_see_also.rst  index.rst  nxt-push.rst  nxt-screenshot.rst  nxt-server.rst  nxt-test.rst
docs/handbook/: index.rst  overview.rst  tips.rst  tutorial.rst
docs/source/: conf.py  index.rst
docs/source/api/: brick.rst  direct.rst  error.rst  index.rst  locator.rst  motcont.rst  motor.rst  system.rst
examples/: alpharex.py  cnc.py  latency.py  mary.py  message_test.py  motcont.py  nxt-screen.py  sensors.py  server_prompt.py  stop_turning_motor.py  test_sensors.py
examples/hitechnic-superpro/: example1.py  example2.py  example3.py  example4.py  example6.py  example7.py  example9.py  hitechnic-superpro-bar-display.py
examples/mindsensors/: ACCL.py  LineLeader.py  MMX.py  PS2.py  RTC.py
examples/tutorial/: debug.py  find.py  motor.py  sensor_touch.py  sensor_us.py  stop_turning_motor.py
nxt/: __init__.py  bluesock.py  brick.py  compass.py  conftest.py  devsock.py  direct.py  error.py  fantomsock.py  htcompass.py  ipsock.py  lightblueglue.py  locator.py  motcont.py  motor.py  sensor.py  server.py  serversock.py  system.py  telegram.py  usbsock.py
nxt/backend/: __init__.py  bluetooth.py  btsocket.py  devfile.py  socket.py  usb.py
nxt/command/: push.py  screenshot.py  server.py  test.py
nxt/sensor/: __init__.py  analog.py  digital.py  generic.py  hitechnic.py  mindsensors.py
scripts/: README  fantom_test  nxt_filer  nxt_push  nxt_screenshot  nxt_server  nxt_server.py  nxt_test  nxtfilemgr  python-nxt-filer.desktop
tags/v0.7/: README  setup.py
tags/v0.7/examples/: spin.py
tags/v0.7/nxt/: brick.py
tags/v0.8/: setup.py
tags/v0.8.1/: build_dists.bat
tags/v0.8.1/docs/: nxt_python.html
tags/v0.8.1/nxt/: motor.py  sensor.py  server.py
tags/v0.8/docs/: nxt_python.html
tags/v0.8/nxt/: brick.py  sensor.py  server.py  telegram.py  usbsock.py
tags/v0.8/scripts/: nxt_filer
tags/v0.9/docs/: nxt_python.html
tags/v0.9/nxt/: sensor.py  server.py
tags/v1.0.0/examples/: mary.py
tags/v1.0.0/scripts/: nxt_push
tags/v1.0.1/scripts/: nxt_test
tags/v1.0/examples/: message_test.py
tags/v1.1.1/: setup.py
tags/v1.1.1/docs/: nxt_python.html
tags/v1.1.2/: MANIFEST.in  README
tags/v1.1.2/docs/: nxt_python.css
tags/v1.1.2/nxt/: sensor.py
tags/v1.2.0/: setup.py
tags/v2.0-beta-0/: MANIFEST.in  install.bat  setup.py
tags/v2.0-beta-0/nxt/: brick.py  system.py
tags/v2.0-beta-0/scripts/: nxt_test
tags/v2.0.0/nxt/: brick.py
tags/v2.0.1/nxt/: __init__.py
tags/v2.0.2/: README
tags/v2.0.2/examples/: spin.py
tags/v2.0.2/nxt/: locator.py
tags/v2.0.3/: MANIFEST.in
tags/v2.0.3/nxt/: usbsock.py
tags/v2.1.0/: README  setup.py
tags/v2.2.0/examples/: cnc.py  mary.py
tags/v2.2.1/: README
tags/v2.2.1/examples/: alpharex.py
tags/v2.2.1/nxt/: fantomsock.py  lightblueglue.py  usbsock.py
tags/v2.2.1/scripts/: fantom_test
tags/v2.2.2/docs/: nxt_push.1
tags/v2.2.2/nxt/: direct.py  error.py  fantomsock.py  motcont.py  motor.py  system.py
tests/: conftest.py  test_backend_bluetooth.py  test_backend_devfile.py  test_backend_socket.py  test_backend_usb.py  test_bluesock.py  test_brick.py  test_devsock.py  test_ipsock.py  test_locator.py  test_motcont.py  test_motor.py  test_sensors.py  test_usbsock.py
trunk/: MANIFEST.in  README  Readme.txt  install.bat  setup.py
trunk/docs/: more docs.url  nxt_python.html
trunk/examples/: server_prompt.py  spin.py
trunk/examples/mindsensors/: ACCL.py  PS2.py  RTC.py
trunk/nxt/: __init__.py  bluesock.py  brick.py  compass.py  devsock.py  fantomsock.py  ipsock.py  locator.py  motcont.py  motor.py  sensor.py  server.py  serversock.py  system.py  telegram.py  usbsock.py  utils.py
trunk/nxt/sensor/: __init__.py  digital.py  generic.py  hitechnic.py  mindsensors.py
trunk/scripts/: nxt_filer  nxt_push  nxt_sensor_report  nxt_server  nxt_server.py  nxt_test  python-nxt-filer.desktop
wiki/: DeveloperGuide.wiki  DigitalSensorGuide.wiki  Documentation.wiki  FAQ.wiki  Installation.wiki  LocationConfig.wiki  PageName.wiki  ServerUsage.wiki  Tutorial.wiki  Versions.wiki
(+36 files in other folders)
