[metadata]
name = nxt-python
version = 3.0.0a1
author = Nicolas Schodet
author_email = nico@ni.fr.eu.org
description = LEGO Mindstorms NXT Control Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/schodet/nxt-python/
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent

[options]
zip_safe = True
packages =
	nxt
	nxt.backend
	nxt.sensor
scripts =
	scripts/nxt_filer
	scripts/nxt_push
	scripts/nxt_server
	scripts/nxt_test
python_requires = >=3.6
install_requires =
	pyusb >= 1.2.1
	pybluez >= 0.23; platform_system == 'Linux'
	pybluez >= 0.23; platform_system == 'Windows'
	pybluez >= 0.23; platform_system == 'Darwin'

[flake8]
max-line-length = 88

[isort]
profile = black

[tool:pytest]
testpaths = tests

[coverage:run]
command_line =
	-m pytest
source =
	nxt
