[metadata]
name = nxt-python
version = 3.2.0
author = Nicolas Schodet
author_email = nico@ni.fr.eu.org
description = LEGO Mindstorms NXT Control Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/schodet/nxt-python/
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent

[options]
zip_safe = True
packages =
	nxt
	nxt.backend
	nxt.sensor
scripts =
	scripts/nxt_filer
	scripts/nxt_push
	scripts/nxt_server
	scripts/nxt_test
python_requires = >=3.7
install_requires =
	pyusb >= 1.2.1

[options.extras_require]
bluetooth =
	pybluez >= 0.23; platform_system == 'Linux'
	pybluez >= 0.23; platform_system == 'Windows'
	pybluez >= 0.23; platform_system == 'Darwin'
dev =
	pytest >= 6.0.2
	coverage >= 5.1
	pre-commit >= 2.10.1
	check-manifest >= 0.48
	sphinx >= 3.4.3
	sphinx-rtd-theme >= 0.5.1
	sphinx-autodoc-typehints >= 1.12.0
	tox >= 3.21.4

[flake8]
max-line-length = 88

[isort]
profile = black

[tool:pytest]
addopts = --doctest-modules
testpaths = nxt tests

[coverage:run]
command_line =
	-m pytest
source =
	nxt

[check-manifest]
ignore =
	.builds/*
